software-center (1.1.13) UNRELEASED; urgency=low

  * data/featured.menu.in:
    - add scribus, blender
    - fix missing i18n

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Feb 2010 14:29:54 +0100

software-center (1.1.12) lucid; urgency=low

  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/spinner  (many thanks)
  * merged lp:~mmcg069/software-center/fixes-and-tweaks  (many thanks)
  
  [ Gary Lasker ]
  * implement standalone presentation of individual software
    repositories
  
  [ Michael Vogt ]
  * README:
    - document menu.d/ directory
  * softwarecenter/view/catview.py:
    - add SCPkgname xml filter
  * apt-xapian-index-plugin/software-center.py:
    - add custom apt-xapian-index plugins for indexing 
      "XB-Softwarecenter-Appname" in debian/control
  * apt-xapian-index-plugin/origin.py:
    - add custom apt-xapian-index plugins for indexing the origins
  * softwarecenter/distro/Ubuntu.py:
    - add abstraction for distro_channel_{name,description}
  * softwarecenter/distro/__init__.py:
    - make get_distro() return a singleton
  * softwarecenter/view/channelpane.py:
    - for the main distro channel, show only apps, not all packages
  * data/featured.menu.in:
    - add a "Featured" category

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Feb 2010 10:13:41 +0100

software-center (1.1.11) lucid; urgency=low

  [ Michael Vogt ]
  * make action buttons in the appview insensitive while a action
    is in progress
  * added po/th.po:
    - thanks to Sira Nokyoonhtong 
  * merge lp:~tomeu/software-center/bug-fixes that makes the 
    "No screenshot available" text translatable, thanks to
    Tomeu Vizoso (LP: #443066)
  * softwarecenter/backend/aptd.py:
    - only set meta-data that is actually available (LP: #499392)
  * utils/update-software-center:
    - warn if locale can not be set (LP: #516266)
  * merge branch lp:~juliank/software-center/debian (many thanks)
  * merge lp:~mvo/software-center/spinner, this gives us inline